# SC-Lyoko

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/: App.hpp  AssetManager.hpp  Base.hpp  Button.hpp  Container.hpp  Deserialize.hpp  Layout.hpp  LyokoInterface.hpp  Menu.hpp  Scene.hpp  Serialize.hpp
scenes/: out.json
src/: App.cpp  Base.cpp  Button.cpp  Container.cpp  Layout.cpp  Menu.cpp  Scene.cpp  main.cpp
